--- a/InternetShop_Dynamic/InternetShop_Dynamic.csproj
+++ b/InternetShop_Dynamic/InternetShop_Dynamic.csproj
@@ -246,6 +246,8 @@
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Good.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Newsletter.cs" />
+    <Compile Include="Models\UserDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -261,6 +263,7 @@
     <Content Include="Common\Images\menusep.gif" />
     <Content Include="Common\Images\topaff.jpg" />
     <Content Include="Common\Images\topgreybox.jpg" />
+    <Content Include="Common\Templates\newsletter.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\stylesheet.css" />
