--- a/InternetShop_Dynamic/InternetShop_Dynamic.csproj
+++ b/InternetShop_Dynamic/InternetShop_Dynamic.csproj
@@ -322,6 +322,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Main\AdminAccount.cshtml" />
     <Content Include="Views\Main\Products.cshtml" />
+    <Content Include="Views\Main\Product.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
