--- a/InternetShop_Dynamic/InternetShop_Dynamic.csproj
+++ b/InternetShop_Dynamic/InternetShop_Dynamic.csproj
@@ -330,6 +330,7 @@
     <Content Include="Views\Main\Products.cshtml" />
     <Content Include="Views\Main\Product.cshtml" />
     <Content Include="Views\Basket\Basket.cshtml" />
+    <Content Include="Views\Main\SimpleAccount.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
