--- a/InternetShop_Dynamic/InternetShop_Dynamic.csproj
+++ b/InternetShop_Dynamic/InternetShop_Dynamic.csproj
@@ -252,6 +252,7 @@
     <Compile Include="Models\Good.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Newsletter.cs" />
+    <Compile Include="Models\RestorePasswordEntry.cs" />
     <Compile Include="Models\UserDto.cs" />
     <Compile Include="Models\UserLogItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -331,6 +332,7 @@
     <Content Include="Views\Main\Product.cshtml" />
     <Content Include="Views\Basket\Basket.cshtml" />
     <Content Include="Views\Main\SimpleAccount.cshtml" />
+    <Content Include="Views\Auth\ChangePassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
